# 42

libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
printf/: Makefile  ft_printf.c  ft_printf.h  ft_printf_format.c  ft_printf_utils.c
py00/ex0/: ft_hello_garden.py
py00/ex1/: ft_plot_area.py
py00/ex2/: ft_harvest_total.py
py00/ex3/: ft_plant_age.py
py00/ex4/: ft_water_reminder.py
py00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
py00/ex6/: ft_garden_summary.py
py00/ex7/: ft_seed_inventory.py
py01/ex0/: ft_garden_intro.py
py01/ex1/: ft_garden_data.py
py01/ex2/: ft_plant_growth.py
py01/ex3/: ft_plant_factory.py
py01/ex4/: ft_garden_security.py
py01/ex5/: ft_plant_types.py
py01/ex6/: ft_garden_analytics.py
py06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
py060/: ft_circular_curse.py
py08/ex01/: loading.py  pyproject.toml
swap/: 5500.rejected  700.rejected  Makefile  README.md  checker_linux  push_swap_tester
(+85 files in other folders)
